[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core"]

[project]
name = 'pyistp'
version = "0.2.2"
description = "An easy to use ISTP loader package."
keywords= ["satellite", "plasma-physics", "nasa-data", "amda", "cdpp", "CDF"]
authors = [
  {name = "Alexis Jeandet", email = "alexis.jeandet@member.fsf.org" }
]

maintainers = [
  {name = "Alexis Jeandet", email = "alexis.jeandet@member.fsf.org" }
]

requires-python=">=3.7"
license = {file="COPYING"}
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = ['pycdfpp', 'xarray']
[project.urls]
homepage = "https://github.com/SciQLop/PyISTP"
